--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <div class="content">
         <div id="my-page" class="tab active">
             <h1>Welcome Back!</h1>
+            <div style="background: linear-gradient(45deg, #ff6b6b, #feca57); padding: 20px; border-radius: 15px; text-align: center; margin: 20px 0; box-shadow: 0 8px 16px rgba(0,0,0,0.2);">
+                <h2 style="color: white; font-size: 28px; margin: 0; text-shadow: 2px 2px 4px rgba(0,0,0,0.5);">EDUCATION IS MEANT TO BE FREE</h2>
+                <p style="color: white; font-size: 18px; margin: 10px 0 0 0;">Your journey to free knowledge starts here! 🌟</p>
+            </div>
             <p>This is your personal dashboard. Your progress, scores, and study time will appear here as you complete lessons and assessments.</p>
             <div id="progress-summary">
                 <h2>Your Progress</h2>
@@ -31,16 +35,16 @@
             <h2>Total Study Time: <span id="total-time">0</span> minutes</h2>
         </div>
 
-       <div id="lessons" class="tab">
-    <h1>Lessons</h1>
-    <p>Choose a subject to start learning. All lessons are detailed, textbook-style with explanations, examples, formulas, diagrams, and helpful videos.</p>
-    <div class="subject-grid">
-        <a href="subjects/precalc/index.html" class="subject-card">Pre-Calculus</a>
-        <a href="subjects/genbio1/index.html" class="subject-card">General Biology 1</a>
-        <a href="subjects/genchem1/index.html" class="subject-card">General Chemistry 1</a>
-        <a href="subjects/genphys1/index.html" class="subject-card">General Physics 1</a>
-        <a href="subjects/earthscience/index.html" class="subject-card">Earth Science</a>
-    </div>
+        <div id="lessons" class="tab">
+            <h1>Lessons</h1>
+            <p>Choose a subject to start learning:</p>
+            <div class="subject-grid">
+                <a href="lessons/precalc.html" class="subject-card">Pre-Calculus</a>
+                <a href="lessons/genbio1.html" class="subject-card">General Biology 1</a>
+                <a href="lessons/genchem1.html" class="subject-card">General Chemistry 1</a>
+                <a href="lessons/genphys1.html" class="subject-card">General Physics 1</a>
+                <a href="lessons/earthscience.html" class="subject-card">Earth Science</a>
+            </div>
         </div>
 
         <div id="activities" class="tab">
