--- a/subjects/precalc/index.html
+++ b/subjects/precalc/index.html
@@ -7,18 +7,48 @@
     <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
-    <a href="../../index.html" style="position: fixed; top: 20px; left: 20px; font-size: 18px; color: #3498db; background: white; padding: 10px; border-radius: 10px;">← Back to Home</a>
+    <a href="../../index.html" style="position: fixed; top: 20px; left: 20px; font-size: 18px; color: #3498db; background: white; padding: 10px; border-radius: 10px; z-index: 1000;">← Back to Home</a>
 
     <div class="content">
         <h1>Pre-Calculus</h1>
-        <p><strong>Grade 11 STEM - DepEd Philippines Curriculum</strong></p>
-        <p>Welcome! This subject covers Analytic Geometry (Conic Sections), Series & Mathematical Induction, and Trigonometry. Choose a unit below to start.</p>
+        <p><strong>Grade 11 STEM - Philippines DepEd Curriculum</strong></p>
+        <p>Choose a unit to start learning. Detailed explanations, examples, and videos included.</p>
 
         <div class="subject-grid">
-            <a href="unit1-conics.html" class="subject-card">Unit 1: Analytic Geometry<br>(Conic Sections)</a>
-            <a href="unit2-series.html" class="subject-card">Unit 2: Series & Mathematical Induction</a>
-            <a href="unit3-trig.html" class="subject-card">Unit 3: Trigonometric Functions & Identities</a>
+            <a href="unit1.html" class="subject-card">Unit 1: Analytic Geometry (Conic Sections)</a>
+            <a href="unit2.html" class="subject-card">Unit 2: Series, Sequences & Mathematical Induction</a>
+            <a href="unit3.html" class="subject-card">Unit 3: Trigonometric Identities & Equations</a>
+            <!-- Add more units later as new files -->
         </div>
+
+        <!-- Full lessons below - we'll split into unit files later when you want -->
+        <h2>All Topics (Full Textbook View)</h2>
+
+        <h3>Unit 1: Analytic Geometry</h3>
+        <h4>Circle</h4>
+        <p><strong>Objectives:</strong> Identify standard/general form, find center/radius, graph.</p>
+        <p>Standard: (x - h)² + (y - k)² = r²</p>
+        <p>Example: (x + 4)² + (y - 1)² = 25 → Center (-4,1), Radius 5</p>
+        <p>Video: <a href="https://www.youtube.com/watch?v=4wTsurT1qBg" target="_blank">Khan Academy Circle</a></p>
+
+        <h4>Parabola</h4>
+        <p>Forms: (x - h)² = 4p(y - k) or (y - k)² = 4p(x - h)</p>
+        <p>Example: (x - 1)² = -8(y + 2) → Vertex (1,-2), opens down</p>
+        <p>Video: <a href="https://www.youtube.com/watch?v=2b1A0e9ADL4" target="_blank">Parabola</a></p>
+
+        <h4>Ellipse & Hyperbola</h4>
+        <p>Ellipse: (x-h)²/a² + (y-k)²/b² = 1</p>
+        <p>Hyperbola: (x-h)²/a² - (y-k)²/b² = 1</p>
+        <p>Videos linked above.</p>
+
+        <h3>Unit 2: Series & Induction</h3>
+        <p>Arithmetic: a_n = a1 + (n-1)d</p>
+        <p>Geometric: a_n = a1 * r^(n-1)</p>
+        <p>Example sum: First 10 terms of 2,5,8,... = 155</p>
+
+        <h3>Unit 3: Trigonometry</h3>
+        <p>Identities: sin²θ + cos²θ = 1, tan²θ + 1 = sec²θ</p>
+        <p>Prove and solve equations.</p>
     </div>
 </body>
 </html>
