--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
         </div>
 
         <div id="activities" class="tab">
-            <h1>Activities & Quizzes</h1>
-            <p>Practice with 10-question quizzes (15 minutes each).</p>
-            <div class="subject-grid">
-                <!-- Links added as we create them -->
-            </div>
-        </div>
+    <h1>Activities & Quizzes</h1>
+    <p>10 questions • 15 minutes • Auto-graded with explanations</p>
+    <p>One quiz per unit. Complete them to track progress!</p>
 
-        <div id="tests" class="tab">
-            <h1>Tests</h1>
-            <p>Full exams with 50 questions (90 minutes each).</p>
-            <div class="subject-grid">
-                <p>Tests coming soon!</p>
-            </div>
+    <h2>Pre-Calculus Quizzes</h2>
+    <div class="subject-grid">
+        <a href="quizzes/precalc-q1.html" class="subject-card">Quiz 1: Analytic Geometry (Conic Sections)</a>
+        <a href="quizzes/precalc-q2.html" class="subject-card">Quiz 2: Series & Sequences</a>
+        <a href="quizzes/precalc-q3.html" class="subject-card">Quiz 3: Trigonometry</a>
+    </div>
+
+    <p>More subjects coming soon!</p>
+</div>
         </div>
     </div>
 
