--- a/index.html
+++ b/index.html
@@ -4,66 +4,101 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online SHS - Education is Meant to be Free</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="sidebar">
-        <button onclick="showTab('myPage')">My Page</button>
-        <button onclick="showTab('lessons')">Lessons</button>
-        <button onclick="showTab('quizzes')">Activity/Quiz</button>
-        <button onclick="showTab('tests')">Tests</button>
-        <button onclick="toggleSidebar()">Hide Sidebar</button>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
+        <div class="container-fluid">
+            <button class="toggle-btn me-2 text-white bg-transparent border-0 fs-5" id="sidebarToggle">
+                <i class="ri-menu-line"></i>
+            </button>
+            <a class="navbar-brand fw-bold" href="#">Online SHS</a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link text-white m-0 mx-2 transition" href="#"><i class="ri-information-line me-1"></i>About</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Sidebar -->
+    <div class="sidebar bg-dark vh-100 position-fixed top-0 pt-5" id="sidebar">
+        <ul class="list-unstyled m-0">
+            <li>
+                <button class="d-block py-3 px-3 mt-3 text-white text-decoration-none hover-bg w-100 text-start" onclick="showTab('myPage')"><i class="ri-user-line me-2"></i>My Page</button>
+            </li>
+            <li>
+                <button class="d-block py-3 px-3 text-white text-decoration-none hover-bg w-100 text-start" onclick="showTab('lessons')"><i class="ri-book-open-line me-2"></i>Lessons</button>
+            </li>
+            <li>
+                <button class="d-block py-3 px-3 text-white text-decoration-none hover-bg w-100 text-start" onclick="showTab('quizzes')"><i class="ri-questionnaire-line me-2"></i>Activity/Quiz</button>
+            </li>
+            <li>
+                <button class="d-block py-3 px-3 text-white text-decoration-none hover-bg w-100 text-start" onclick="showTab('tests')"><i class="ri-file-paper-2-line me-2"></i>Tests</button>
+            </li>
+        </ul>
     </div>
-    <div id="content">
-        <div id="myPage" class="tab">
-            <h1>Welcome Back!</h1>
-            <h2>"EDUCATION IS MEANT TO BE FREE"</h2>
-            <h3>Your Progress</h3>
-            <div id="progress-charts"></div>
-            <p id="points">Points: 0 / 1000 (Aim for 800 to pass)</p>
-            <p id="study-time">Study Time: 0 minutes</p>
-            <div id="lesson-times"></div>
-        </div>
-        <div id="lessons" class="tab" style="display:none;">
-            <h1>Lessons</h1>
-            <select id="subject-select" onchange="loadUnits(this.value)">
-                <option value="">Select Subject</option>
-                <option value="PreCalculus">Pre-Calculus</option>
-                <option value="GeneralBiology1">General Biology 1</option>
-                <option value="GeneralChemistry1">General Chemistry 1</option>
-                <option value="GeneralPhysics1">General Physics 1</option>
-                <option value="EarthScience">Earth Science</option>
-            </select>
-            <div id="unit-list"></div>
-            <div id="lesson-content"></div>
-        </div>
-        <div id="quizzes" class="tab" style="display:none;">
-            <h1>Activity/Quiz</h1>
-            <select id="quiz-subject" onchange="loadQuizUnits(this.value)">
-                <option value="">Select Subject</option>
-                <option value="PreCalculus">Pre-Calculus</option>
-                <option value="GeneralBiology1">General Biology 1</option>
-                <option value="GeneralChemistry1">General Chemistry 1</option>
-                <option value="GeneralPhysics1">General Physics 1</option>
-                <option value="EarthScience">Earth Science</option>
-            </select>
-            <div id="quiz-list"></div>
-            <div id="quiz-content"></div>
-        </div>
-        <div id="tests" class="tab" style="display:none;">
-            <h1>Tests</h1>
-            <select id="test-subject" onchange="loadTestUnits(this.value)">
-                <option value="">Select Subject</option>
-                <option value="PreCalculus">Pre-Calculus</option>
-                <option value="GeneralBiology1">General Biology 1</option>
-                <option value="GeneralChemistry1">General Chemistry 1</option>
-                <option value="GeneralPhysics1">General Physics 1</option>
-                <option value="EarthScience">Earth Science</option>
-            </select>
-            <div id="test-list"></div>
-            <div id="test-content"></div>
-        </div>
+
+    <!-- Main Content -->
+    <div class="main-content">
+        <section class="container pt-5 mt-5">
+            <div id="myPage" class="tab">
+                <h1>Welcome Back!</h1>
+                <h2>"EDUCATION IS MEANT TO BE FREE"</h2>
+                <h3>Your Progress</h3>
+                <div id="progress-charts" class="row g-3"></div>
+                <p id="points" class="mt-3">Points: 0 / 1000 (Aim for 800 to pass)</p>
+                <p id="study-time">Study Time: 0 minutes</p>
+                <div id="lesson-times"></div>
+            </div>
+            <div id="lessons" class="tab" style="display:none;">
+                <h1>Lessons</h1>
+                <select id="subject-select" class="form-select mb-3" onchange="loadUnits(this.value)">
+                    <option value="">Select Subject</option>
+                    <option value="PreCalculus">Pre-Calculus</option>
+                    <option value="GeneralBiology1">General Biology 1</option>
+                    <option value="GeneralChemistry1">General Chemistry 1</option>
+                    <option value="GeneralPhysics1">General Physics 1</option>
+                    <option value="EarthScience">Earth Science</option>
+                </select>
+                <div id="unit-list" class="d-flex flex-wrap gap-2"></div>
+                <div id="lesson-content" class="mt-4 card p-3"></div>
+            </div>
+            <div id="quizzes" class="tab" style="display:none;">
+                <h1>Activity/Quiz</h1>
+                <select id="quiz-subject" class="form-select mb-3" onchange="loadQuizUnits(this.value)">
+                    <option value="">Select Subject</option>
+                    <option value="PreCalculus">Pre-Calculus</option>
+                    <option value="GeneralBiology1">General Biology 1</option>
+                    <option value="GeneralChemistry1">General Chemistry 1</option>
+                    <option value="GeneralPhysics1">General Physics 1</option>
+                    <option value="EarthScience">Earth Science</option>
+                </select>
+                <div id="quiz-list" class="d-flex flex-wrap gap-2"></div>
+                <div id="quiz-content" class="mt-4 card p-3"></div>
+            </div>
+            <div id="tests" class="tab" style="display:none;">
+                <h1>Tests</h1>
+                <select id="test-subject" class="form-select mb-3" onchange="loadTestUnits(this.value)">
+                    <option value="">Select Subject</option>
+                    <option value="PreCalculus">Pre-Calculus</option>
+                    <option value="GeneralBiology1">General Biology 1</option>
+                    <option value="GeneralChemistry1">General Chemistry 1</option>
+                    <option value="GeneralPhysics1">General Physics 1</option>
+                    <option value="EarthScience">Earth Science</option>
+                </select>
+                <div id="test-list" class="d-flex flex-wrap gap-2"></div>
+                <div id="test-content" class="mt-4 card p-3"></div>
+            </div>
+        </section>
     </div>
+
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
