--- a/index.html
+++ b/index.html
@@ -9,56 +9,45 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
+    <!-- Fixed Top Navbar with Toggle Button -->
+    <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-            <button class="toggle-btn me-2 text-white bg-transparent border-0 fs-5" id="sidebarToggle">
+            <button id="sidebarToggle" class="btn btn-dark me-2 fs-4">
                 <i class="ri-menu-line"></i>
             </button>
             <a class="navbar-brand fw-bold" href="#">Online SHS</a>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link text-white m-0 mx-2 transition" href="#"><i class="ri-information-line me-1"></i>About</a>
-                    </li>
-                </ul>
-            </div>
+            <span class="navbar-text ms-auto">"EDUCATION IS MEANT TO BE FREE"</span>
         </div>
     </nav>
 
     <!-- Sidebar -->
     <div class="sidebar bg-dark vh-100 position-fixed top-0 pt-5" id="sidebar">
-        <ul class="list-unstyled m-0">
-            <li>
-                <button class="d-block py-3 px-3 mt-3 text-white text-decoration-none hover-bg w-100 text-start" onclick="showTab('myPage')"><i class="ri-user-line me-2"></i>My Page</button>
-            </li>
-            <li>
-                <button class="d-block py-3 px-3 text-white text-decoration-none hover-bg w-100 text-start" onclick="showTab('lessons')"><i class="ri-book-open-line me-2"></i>Lessons</button>
-            </li>
-            <li>
-                <button class="d-block py-3 px-3 text-white text-decoration-none hover-bg w-100 text-start" onclick="showTab('quizzes')"><i class="ri-questionnaire-line me-2"></i>Activity/Quiz</button>
-            </li>
-            <li>
-                <button class="d-block py-3 px-3 text-white text-decoration-none hover-bg w-100 text-start" onclick="showTab('tests')"><i class="ri-file-paper-2-line me-2"></i>Tests</button>
-            </li>
+        <ul class="list-unstyled px-3">
+            <li><button class="btn text-white w-100 text-start py-3" onclick="showTab('myPage')"><i class="ri-user-line me-2"></i>My Page</button></li>
+            <li><button class="btn text-white w-100 text-start py-3" onclick="showTab('lessons')"><i class="ri-book-open-line me-2"></i>Lessons</button></li>
+            <li><button class="btn text-white w-100 text-start py-3" onclick="showTab('quizzes')"><i class="ri-questionnaire-line me-2"></i>Activity/Quiz</button></li>
+            <li><button class="btn text-white w-100 text-start py-3" onclick="showTab('tests')"><i class="ri-file-paper-2-line me-2"></i>Tests</button></li>
         </ul>
     </div>
 
     <!-- Main Content -->
     <div class="main-content">
         <section class="container pt-5 mt-5">
+            <!-- My Page - All previous features restored -->
             <div id="myPage" class="tab">
                 <h1>Welcome Back!</h1>
                 <h2>"EDUCATION IS MEANT TO BE FREE"</h2>
                 <h3>Your Progress</h3>
                 <div id="progress-charts" class="row g-3"></div>
-                <p id="points" class="mt-3">Points: 0 / 1000 (Aim for 800 to pass)</p>
-                <p id="study-time">Study Time: 0 minutes</p>
-                <div id="lesson-times"></div>
+                <p id="points" class="mt-3 fw-bold">Points: 0 / 1000 (Aim for 800 to pass)</p>
+                <p id="study-time" class="mt-2">Study Time: 0 minutes</p>
+                <div id="lesson-times" class="mt-4"></div>
             </div>
+
+            <!-- Lessons Tab -->
             <div id="lessons" class="tab" style="display:none;">
                 <h1>Lessons</h1>
-                <select id="subject-select" class="form-select mb-3" onchange="loadUnits(this.value)">
+                <select id="subject-select" class="form-select mb-3 w-50" onchange="loadUnits(this.value)">
                     <option value="">Select Subject</option>
                     <option value="PreCalculus">Pre-Calculus</option>
                     <option value="GeneralBiology1">General Biology 1</option>
@@ -66,12 +55,14 @@
                     <option value="GeneralPhysics1">General Physics 1</option>
                     <option value="EarthScience">Earth Science</option>
                 </select>
-                <div id="unit-list" class="d-flex flex-wrap gap-2"></div>
-                <div id="lesson-content" class="mt-4 card p-3"></div>
+                <div id="unit-list" class="d-flex flex-wrap gap-2 mb-4"></div>
+                <div id="lesson-content" class="card p-4 bg-white shadow"></div>
             </div>
+
+            <!-- Quizzes Tab -->
             <div id="quizzes" class="tab" style="display:none;">
                 <h1>Activity/Quiz</h1>
-                <select id="quiz-subject" class="form-select mb-3" onchange="loadQuizUnits(this.value)">
+                <select id="quiz-subject" class="form-select mb-3 w-50" onchange="loadQuizUnits(this.value)">
                     <option value="">Select Subject</option>
                     <option value="PreCalculus">Pre-Calculus</option>
                     <option value="GeneralBiology1">General Biology 1</option>
@@ -79,12 +70,14 @@
                     <option value="GeneralPhysics1">General Physics 1</option>
                     <option value="EarthScience">Earth Science</option>
                 </select>
-                <div id="quiz-list" class="d-flex flex-wrap gap-2"></div>
-                <div id="quiz-content" class="mt-4 card p-3"></div>
+                <div id="quiz-list" class="d-flex flex-wrap gap-2 mb-4"></div>
+                <div id="quiz-content" class="card p-4 bg-white shadow"></div>
             </div>
+
+            <!-- Tests Tab -->
             <div id="tests" class="tab" style="display:none;">
                 <h1>Tests</h1>
-                <select id="test-subject" class="form-select mb-3" onchange="loadTestUnits(this.value)">
+                <select id="test-subject" class="form-select mb-3 w-50" onchange="loadTestUnits(this.value)">
                     <option value="">Select Subject</option>
                     <option value="PreCalculus">Pre-Calculus</option>
                     <option value="GeneralBiology1">General Biology 1</option>
@@ -92,8 +85,8 @@
                     <option value="GeneralPhysics1">General Physics 1</option>
                     <option value="EarthScience">Earth Science</option>
                 </select>
-                <div id="test-list" class="d-flex flex-wrap gap-2"></div>
-                <div id="test-content" class="mt-4 card p-3"></div>
+                <div id="test-list" class="d-flex flex-wrap gap-2 mb-4"></div>
+                <div id="test-content" class="card p-4 bg-white shadow"></div>
             </div>
         </section>
     </div>
