--- a/index.html
+++ b/index.html
@@ -1,97 +1,88 @@
+<!-- lessons/precalc/index.html (New File) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online SHS - Education is Meant to be Free</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <title>Pre-Calculus - Grade 11 STEM</title>
+    <style>
+        body { font-family: 'Roboto', sans-serif; padding: 20px; background: #f8f9fa; color: #333; line-height: 1.6; }
+        h1, h2, h3 { color: #198754; }
+        .overview { background: white; padding: 25px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); margin-bottom: 40px; }
+        .unit-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; }
+        .unit-card { background: white; padding: 30px; border-radius: 12px; box-shadow: 0 6px 20px rgba(0,0,0,0.1); text-align: center; transition: transform 0.3s ease; }
+        .unit-card:hover { transform: translateY(-10px); box-shadow: 0 12px 30px rgba(0,0,0,0.15); }
+        .unit-card h4 { color: #198754; margin-bottom: 15px; font-size: 1.5rem; }
+        .unit-card p { margin-bottom: 20px; }
+        .unit-card button { 
+            background: #198754; color: white; border: none; padding: 14px 28px; 
+            border-radius: 8px; font-size: 16px; cursor: pointer; transition: background 0.3s; 
+        }
+        .unit-card button:hover { background: #157347; }
+        .video-section { margin-top: 60px; background: white; padding: 30px; border-radius: 12px; box-shadow: 0 6px 20px rgba(0,0,0,0.1); }
+        iframe { width: 100%; max-width: 800px; height: 450px; border-radius: 10px; }
+        ul { padding-left: 25px; }
+        a { color: #198754; text-decoration: underline; }
+        a:hover { color: #157347; }
+    </style>
 </head>
 <body>
-    <!-- Fixed Top Navbar with Toggle Button -->
-    <nav class="navbar navbar-dark bg-dark fixed-top">
-        <div class="container-fluid">
-            <button id="sidebarToggle" class="btn btn-dark me-2 fs-4">
-                <i class="ri-menu-line"></i>
-            </button>
-            <a class="navbar-brand fw-bold" href="#">Online SHS</a>
-            <span class="navbar-text ms-auto">"EDUCATION IS MEANT TO BE FREE"</span>
-        </div>
-    </nav>
+    <div class="overview">
+        <h1>Pre-Calculus (Grade 11 STEM)</h1>
+        <p><strong>Subject Overview:</strong> This course introduces analytic geometry, focusing on conic sections—their definitions, equations, graphs, and real-world applications. It strengthens algebraic and geometric skills essential for calculus.</p>
 
-    <!-- Sidebar -->
-    <div class="sidebar bg-dark vh-100 position-fixed top-0 pt-5" id="sidebar">
-        <ul class="list-unstyled px-3">
-            <li><button class="btn text-white w-100 text-start py-3" onclick="showTab('myPage')"><i class="ri-user-line me-2"></i>My Page</button></li>
-            <li><button class="btn text-white w-100 text-start py-3" onclick="showTab('lessons')"><i class="ri-book-open-line me-2"></i>Lessons</button></li>
-            <li><button class="btn text-white w-100 text-start py-3" onclick="showTab('quizzes')"><i class="ri-questionnaire-line me-2"></i>Activity/Quiz</button></li>
-            <li><button class="btn text-white w-100 text-start py-3" onclick="showTab('tests')"><i class="ri-file-paper-2-line me-2"></i>Tests</button></li>
+        <h2>Course Learning Objectives</h2>
+        <ul>
+            <li>Illustrate the formation of conic sections from a double cone.</li>
+            <li>Derive, transform, and graph standard/general equations of circles, parabolas, ellipses, and hyperbolas.</li>
+            <li>Determine key elements (center, vertices, foci, directrix, asymptotes).</li>
+            <li>Solve situational problems involving conic sections.</li>
+            <li>Recognize degenerate cases and solve systems of conics.</li>
         </ul>
     </div>
 
-    <!-- Main Content -->
-    <div class="main-content">
-        <section class="container pt-5 mt-5">
-            <!-- My Page - All previous features restored -->
-            <div id="myPage" class="tab">
-                <h1>Welcome Back!</h1>
-                <h2>"EDUCATION IS MEANT TO BE FREE"</h2>
-                <h3>Your Progress</h3>
-                <div id="progress-charts" class="row g-3"></div>
-                <p id="points" class="mt-3 fw-bold">Points: 0 / 1000 (Aim for 800 to pass)</p>
-                <p id="study-time" class="mt-2">Study Time: 0 minutes</p>
-                <div id="lesson-times" class="mt-4"></div>
-            </div>
-
-            <!-- Lessons Tab -->
-            <div id="lessons" class="tab" style="display:none;">
-                <h1>Lessons</h1>
-                <select id="subject-select" class="form-select mb-3 w-50" onchange="loadUnits(this.value)">
-                    <option value="">Select Subject</option>
-                    <option value="PreCalculus">Pre-Calculus</option>
-                    <option value="GeneralBiology1">General Biology 1</option>
-                    <option value="GeneralChemistry1">General Chemistry 1</option>
-                    <option value="GeneralPhysics1">General Physics 1</option>
-                    <option value="EarthScience">Earth Science</option>
-                </select>
-                <div id="unit-list" class="d-flex flex-wrap gap-2 mb-4"></div>
-                <div id="lesson-content" class="card p-4 bg-white shadow"></div>
-            </div>
-
-            <!-- Quizzes Tab -->
-            <div id="quizzes" class="tab" style="display:none;">
-                <h1>Activity/Quiz</h1>
-                <select id="quiz-subject" class="form-select mb-3 w-50" onchange="loadQuizUnits(this.value)">
-                    <option value="">Select Subject</option>
-                    <option value="PreCalculus">Pre-Calculus</option>
-                    <option value="GeneralBiology1">General Biology 1</option>
-                    <option value="GeneralChemistry1">General Chemistry 1</option>
-                    <option value="GeneralPhysics1">General Physics 1</option>
-                    <option value="EarthScience">Earth Science</option>
-                </select>
-                <div id="quiz-list" class="d-flex flex-wrap gap-2 mb-4"></div>
-                <div id="quiz-content" class="card p-4 bg-white shadow"></div>
-            </div>
-
-            <!-- Tests Tab -->
-            <div id="tests" class="tab" style="display:none;">
-                <h1>Tests</h1>
-                <select id="test-subject" class="form-select mb-3 w-50" onchange="loadTestUnits(this.value)">
-                    <option value="">Select Subject</option>
-                    <option value="PreCalculus">Pre-Calculus</option>
-                    <option value="GeneralBiology1">General Biology 1</option>
-                    <option value="GeneralChemistry1">General Chemistry 1</option>
-                    <option value="GeneralPhysics1">General Physics 1</option>
-                    <option value="EarthScience">Earth Science</option>
-                </select>
-                <div id="test-list" class="d-flex flex-wrap gap-2 mb-4"></div>
-                <div id="test-content" class="card p-4 bg-white shadow"></div>
-            </div>
-        </section>
+    <h2>Select a Unit to Study</h2>
+    <div class="unit-grid">
+        <div class="unit-card">
+            <h4>Unit 1</h4>
+            <p>Introduction to Conic Sections & the Circle</p>
+            <button onclick="loadLesson('PreCalculus', 1)">Start Unit 1</button>
+        </div>
+        <div class="unit-card">
+            <h4>Unit 2</h4>
+            <p>Parabola & Ellipse</p>
+            <button onclick="loadLesson('PreCalculus', 2)">Start Unit 2</button>
+        </div>
+        <div class="unit-card">
+            <h4>Unit 3</h4>
+            <p>Hyperbola</p>
+            <button onclick="loadLesson('PreCalculus', 3)">Start Unit 3</button>
+        </div>
+        <div class="unit-card">
+            <h4>Unit 4</h4>
+            <p>Review, Systems & Applications</p>
+            <button onclick="loadLesson('PreCalculus', 4)">Start Unit 4</button>
+        </div>
     </div>
 
-    <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <div class="video-section">
+        <h2>Recommended Full Course Playlists</h2>
+        <p>These DepEd-aligned playlists provide clear Filipino explanations with examples.</p>
+
+        <h3>Primary Playlist</h3>
+        <p><a href="https://www.youtube.com/playlist?list=PLFG5lKeDCYPnDEPoEPsCZyhopg2IHLnxr" target="_blank">Grade 11 Pre-Calculus (STEM) Complete Coverage</a></p>
+        <iframe src="https://www.youtube.com/embed/videoseries?list=PLFG5lKeDCYPnDEPoEPsCZyhopg2IHLnxr" allowfullscreen></iframe>
+
+        <h3>Alternative Playlist</h3>
+        <p><a href="https://www.youtube.com/playlist?list=PLHvCA6RNznXLbhqeyNzLkrB9iVhB0Ej91" target="_blank">Pre-Calculus Grade 11 Lessons</a></p>
+    </div>
+
+    <script>
+        function loadLesson(subject, unit) {
+            if (parent.loadLesson) {
+                parent.loadLesson(subject, unit);
+            }
+        }
+    </script>
 </body>
 </html>
