--- a/lessons/precalc/index.html
+++ b/lessons/precalc/index.html
@@ -1,3 +1,4 @@
+<!-- lessons/precalc/index.html (Subject Index Page) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,55 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pre-Calculus - Grade 11 STEM</title>
     <style>
-        body { font-family: 'Roboto', sans-serif; padding: 20px; background: #f8f9fa; color: #333; }
-        h1, h2 { color: #198754; }
-        .unit-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 30px; }
-        .unit-card { background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); text-align: center; }
-        .unit-card a { text-decoration: none; color: #198754; font-weight: bold; font-size: 18px; }
-        .unit-card a:hover { color: #157347; }
-        .video-section { margin-top: 40px; }
-        iframe { width: 100%; max-width: 560px; height: 315px; border: none; border-radius: 8px; }
+        body { font-family: 'Roboto', sans-serif; padding: 20px; background: #f8f9fa; color: #333; line-height: 1.6; }
+        h1, h2, h3 { color: #198754; }
+        .overview { background: white; padding: 30px; border-radius: 12px; box-shadow: 0 6px 20px rgba(0,0,0,0.1); margin-bottom: 40px; }
+        .unit-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; }
+        .unit-card { background: white; padding: 35px; border-radius: 15px; box-shadow: 0 8px 25px rgba(0,0,0,0.12); text-align: center; transition: all 0.3s ease; }
+        .unit-card:hover { transform: translateY(-15px); box-shadow: 0 15px 35px rgba(0,0,0,0.2); }
+        .unit-card h4 { font-size: 1.6rem; margin-bottom: 15px; }
+        .unit-card p { font-size: 1.1rem; margin-bottom: 25px; }
+        .unit-card button { background: #198754; color: white; border: none; padding: 15px 30px; border-radius: 10px; font-size: 1.1rem; cursor: pointer; transition: background 0.3s; }
+        .unit-card button:hover { background: #157347; }
+        .video-section { margin-top: 60px; background: white; padding: 35px; border-radius: 15px; box-shadow: 0 8px 25px rgba(0,0,0,0.12); }
+        iframe { width: 100%; max-width: 800px; height: 450px; border-radius: 12px; }
     </style>
 </head>
 <body>
-    <h1>Pre-Calculus (Grade 11 STEM)</h1>
-    <p><strong>Subject Overview:</strong> This course focuses on analytic geometry, conic sections, series and sequences, and mathematical induction. It prepares students for calculus by strengthening algebraic manipulation and geometric understanding.</p>
-    
-    <h2>Course Learning Objectives</h2>
-    <ul>
-        <li>Illustrate and identify the different conic sections (circle, parabola, ellipse, hyperbola).</li>
-        <li>Determine the standard and general equations of conic sections.</li>
-        <li>Solve situational problems involving conic sections.</li>
-        <li>Understand sequences, series, and the binomial theorem.</li>
-        <li>Apply mathematical induction to prove statements.</li>
-    </ul>
+    <div class="overview">
+        <h1>Pre-Calculus (Grade 11 STEM)</h1>
+        <p><strong>Overview:</strong> Analytic geometry course focusing on conic sections, their equations, graphs, and applications.</p>
+        <h2>Learning Objectives</h2>
+        <ul>
+            <li>Understand conic sections formation and properties.</li>
+            <li>Master standard and general equations.</li>
+            <li>Graph and solve real-world problems.</li>
+        </ul>
+    </div>
 
-    <h2>Select a Unit to Study</h2>
+    <h2>Choose a Unit</h2>
     <div class="unit-grid">
         <div class="unit-card">
-            <a href="unit1.html">Unit 1<br>Introduction to Conic Sections & Circles</a>
+            <h4>Unit 1</h4>
+            <p>Introduction to Conic Sections & Circle</p>
+            <button onclick="loadLesson('PreCalculus', 1)">Start</button>
         </div>
         <div class="unit-card">
-            <a href="unit2.html">Unit 2<br>Parabola & Ellipse</a>
+            <h4>Unit 2</h4>
+            <p>Parabola & Ellipse</p>
+            <button onclick="loadLesson('PreCalculus', 2)">Start</button>
         </div>
         <div class="unit-card">
-            <a href="unit3.html">Unit 3<br>Hyperbola & Systems of Conic Sections</a>
+            <h4>Unit 3</h4>
+            <p>Hyperbola</p>
+            <button onclick="loadLesson('PreCalculus', 3)">Start</button>
         </div>
         <div class="unit-card">
-            <a href="unit4.html">Unit 4<br>Series, Sequences & Mathematical Induction</a>
+            <h4>Unit 4</h4>
+            <p>Review & Applications</p>
+            <button onclick="loadLesson('PreCalculus', 4)">Start</button>
         </div>
     </div>
 
     <div class="video-section">
-        <h2>Recommended Full Course Playlists (Filipino Explanations)</h2>
-        <p>These playlists cover the entire Grade 11 Pre-Calculus curriculum with clear examples:</p>
-        
-        <p><strong>Best Overall Playlist:</strong></p>
-        <a href="https://www.youtube.com/playlist?list=PLFG5lKeDCYPnDEPoEPsCZyhopg2IHLnxr" target="_blank">Grade 11 Pre-Calculus (STEM) Full Coverage</a>
+        <h2>Recommended Playlists</h2>
+        <p><a href="https://www.youtube.com/playlist?list=PLFG5lKeDCYPnDEPoEPsCZyhopg2IHLnxr" target="_blank">Grade 11 Pre-Calculus Full Course</a></p>
         <iframe src="https://www.youtube.com/embed/videoseries?list=PLFG5lKeDCYPnDEPoEPsCZyhopg2IHLnxr" allowfullscreen></iframe>
-
-        <p><strong>Another Excellent One (Prof D Style):</strong></p>
-        <a href="https://www.youtube.com/playlist?list=PLHvCA6RNznXLbhqeyNzLkrB9iVhB0Ej91" target="_blank">Pre-Calculus Grade 11 Complete Lessons</a>
     </div>
+
+    <script>
+        function loadLesson(subject, unit) {
+            if (parent.loadLesson) parent.loadLesson(subject, unit);
+        }
+    </script>
 </body>
 </html>
